fixed incorrect body height on mobile devices

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -58,3 +58,12 @@ body,
 
 }
 
+@media (max-width: 767px) {
+    body {
+        position:fixed;
+    }
+}
+
+@viewport {
+    user-zoom: fixed;
+}
